Implemented logging of incoming payment confirmations via CQRS event sourcing